<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/periodTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/glucoseAmountField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_padding"
            android:layout_marginBottom="@dimen/button_padding"
            android:ems="10"
            android:focusable="auto"
            android:gravity="center"
            android:hint="@string/insertTheMeasuredAmount"
            android:inputType="phone"
            android:selectAllOnFocus="false" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelRecordButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:gravity="center|center_horizontal"
                android:onClick="onCancelRecordButton"
                android:text="@string/cancel"
                android:textSize="14sp" />

            <Button
                android:id="@+id/saveRecordButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:gravity="center|center_horizontal"
                android:onClick="onSaveRecordButton"
                android:text="@string/save_record"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>